--- a/index.html
+++ b/index.html
@@ -16,53 +16,42 @@
 </head>
 
 <body>
-  <section class='sticky'>
-    <header class='header'>
+  <nav class='fixed'>
+    <section class='header'>
       <a class="navbar-link">
         <span id="navbar-pseudo-button">Start your migration</span>
-        <span id='action-call'>Get expert guidance and resources to confidently migrate your workloads to DigitalOcean.</span>
-        <span style="font-size: 16px;">  &rsaquo; </span>
+        <span id='action-call'>Get expert guidance and resources to confidently migrate your workloads to
+          DigitalOcean.</span>
+        <span style="font-size: 16px;"> &rsaquo; </span>
       </a>
-    <div class="quick-actions">
-      <a class='navbar-link primary-link'>We're Hiring!</a>
-      <p class='primary-link'>//</p>
-      <a class='navbar-link'>Blog</a>
-      <a class='navbar-link'>Docs</a>
-      <a class='navbar-link'>Get Support</a>
-      <a class='navbar-link'>Sales</a>
-    </div>
-  </header>
+      <div class="quick-actions-container">
+        <a class='navbar-link navbar-primary-link'>We're Hiring!</a>
+        <p class='navbar-primary-link'>//</p>
+        <a class='navbar-link'>Blog</a>
+        <a class='navbar-link'>Docs</a>
+        <a class='navbar-link'>Get Support</a>
+        <a class='navbar-link'>Sales</a>
+      </div>
+    </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <nav>
-      <div>
-        <img />
-        <a>Products</a>
-        <a>Solutions</a>
-        <a>Marketplace</a>
-        <a>Community</a>
-        <a>Pricing</a>
+    <section class="lower-nav">
+      <div class='lower-nav-link-container'>
+        <a class="company-logo-nav">
+          <img alt='home-logo' src='./assets/logo.png'></img>
+        </a>
+        <a class='lower-nav-link lower-nav-link-dropdown'>Products</a>
+        <a class='lower-nav-link lower-nav-link-dropdown'>Solutions</a>
+        <a class='lower-nav-link'>Marketplace</a>
+        <a class='lower-nav-link lower-nav-link-dropdown'>Community</a>
+        <a class='lower-nav-link'>Pricing</a>
       </div>
       <div>
-        <button>sign in</button>
-        <button>sign up</button>
+        <button class='action-button action-button-signin '>Sign in</button>
+        <button class='action-button action-button-signup'>Sign up</button>
       </div>
-    </nav>
-  </section>
+    </section>
+  </nav>
   <section class="welcome">
     <div>
       <h1>Simplify your cloud</h1>
