--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       </div>
     </section>
 
-
     <section class="lower-nav">
       <div class='lower-nav-link-container'>
         <a class="company-logo-nav">
@@ -46,27 +45,49 @@
         <a class='lower-nav-link lower-nav-link-dropdown'>Community</a>
         <a class='lower-nav-link'>Pricing</a>
       </div>
-      <div>
-        <button class='action-button action-button-signin '>Sign in</button>
-        <button class='action-button action-button-signup'>Sign up</button>
+      <div class='login-button-container'>
+        <button class='button button-secondary'>Sign in</button>
+        <button class='button button-primary button-signup'>Sign up</button>
       </div>
     </section>
+
   </nav>
-  <section class="welcome">
-    <div>
-      <h1>Simplify your cloud</h1>
-      <p>Build alongside half a million developers and businesses like you.</p>
-      <span class='form-separator'></span>
-      <form>
-        <input required type='text' placeholder="First name" />
-        <input required type='email' placeholder="Email address" />
-        <input required type='password' placeholder="Password" />
-        <button type="submit">Deploy in seconds</button>
-        <google></google>
-        <github></github>
-      </form>
+  <section class='welcome-screen'>
+    <div class="hero-form-column">
+      <div class='hero-container'>
+        <h1>Simplify your cloud</h1>
+        <p class='hero-form-column-desc'>Build alongside half a million developers and businesses like you.</p>
+        <span class='form-separator'></span>
+        <form>
+          <input required type='text' placeholder="First name" />
+          <input required type='email' placeholder="Email address" />
+          <input required type='password' placeholder="Password" />
+          <div class='hero-button-container'>
+            <button class='button button-primary button-form-submit' type="submit">Deploy in seconds</button>
+            <div>
+              <button class='offshore-button'>
+                <img
+                  src='https://www-static.cdn.prismic.io/www-static/7b66f955-63dd-41f5-a403-e6727b24d4ea_google-logo.svg' />
+              </button>
+              <button class='offshore-button'>
+                <img
+                  src='https://www-static.cdn.prismic.io/www-static/0a3e37e0-1706-41d5-98d1-854585205a5e_github-logo.svg' />
+              </button>
+            </div>
+          </div>
+          <div class='terms-container'>
+            <p>By signing up you agree to the</p> <a href="dsadsa">terms of service</a><p>.</p>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="hero-form-thumbnail">
+      <img src='./assets/some-dude-typing.jpg' alt='' />
     </div>
   </section>
+
+
+
 </body>
 
 </html>
