--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <nav class='fixed'>
     <section class='header'>
       <a class="navbar-link">
-        <span id="navbar-pseudo-button">Start your migration</span>
-        <span id='action-call'>Get expert guidance and resources to confidently migrate your workloads to
+        <span class="navbar-pseudo-button">Start your migration</span>
+        <span>Get expert guidance and resources to confidently migrate your workloads to
           DigitalOcean.</span>
         <span style="font-size: 16px;"> &rsaquo; </span>
       </a>
