--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- get fonts from google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="./css/index.css">
   <title>This website is a sick nae nae</title>
@@ -18,32 +19,32 @@
 <body>
   <nav class='fixed'>
     <section class='header'>
-      <a class="navbar-link">
+      <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class="navbar-link">
         <span class="navbar-pseudo-button">Start your migration</span>
         <span>Get expert guidance and resources to confidently migrate your workloads to
           DigitalOcean.</span>
         <span style="font-size: 16px;"> &rsaquo; </span>
       </a>
       <div class="quick-actions-container">
-        <a class='navbar-link navbar-primary-link'>We're Hiring!</a>
-        <p class='navbar-primary-link'>//</p>
-        <a class='navbar-link'>Blog</a>
-        <a class='navbar-link'>Docs</a>
-        <a class='navbar-link'>Get Support</a>
-        <a class='navbar-link'>Sales</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-link navbar-primary-link'>We're Hiring!</a>
+        <p href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-primary-link'>//</p>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-link'>Blog</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-link'>Docs</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-link'>Get Support</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='navbar-link'>Sales</a>
       </div>
     </section>
 
     <section class="lower-nav">
       <div class='lower-nav-link-container'>
-        <a class="company-logo-nav">
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class="company-logo-nav">
           <img alt='home-logo' src='./assets/logo.png'></img>
         </a>
-        <a class='lower-nav-link lower-nav-link-dropdown'>Products</a>
-        <a class='lower-nav-link lower-nav-link-dropdown'>Solutions</a>
-        <a class='lower-nav-link'>Marketplace</a>
-        <a class='lower-nav-link lower-nav-link-dropdown'>Community</a>
-        <a class='lower-nav-link'>Pricing</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='lower-nav-link lower-nav-link-dropdown'>Products</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='lower-nav-link lower-nav-link-dropdown'>Solutions</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='lower-nav-link'>Marketplace</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='lower-nav-link lower-nav-link-dropdown'>Community</a>
+        <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' class='lower-nav-link'>Pricing</a>
       </div>
       <div class='login-button-container'>
         <button class='button button-secondary'>Sign in</button>
@@ -65,29 +66,146 @@
           <div class='hero-button-container'>
             <button class='button button-primary button-form-submit' type="submit">Deploy in seconds</button>
             <div>
-              <button class='offshore-button'>
+              <button class='offshore-button' type="button">
                 <img
                   src='https://www-static.cdn.prismic.io/www-static/7b66f955-63dd-41f5-a403-e6727b24d4ea_google-logo.svg' />
               </button>
-              <button class='offshore-button'>
+              <button class='offshore-button' type="button">
                 <img
                   src='https://www-static.cdn.prismic.io/www-static/0a3e37e0-1706-41d5-98d1-854585205a5e_github-logo.svg' />
               </button>
             </div>
           </div>
           <div class='terms-container'>
-            <p>By signing up you agree to the</p> <a href="dsadsa">terms of service</a><p>.</p>
+            <p class='terms-text'>By signing up you agree to the</p>
+            <a class='terms-text terms-link' href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>terms of service</a>
+            <p class='terms-text'>.</p>
           </div>
         </form>
       </div>
     </div>
     <div class="hero-form-thumbnail">
-      <img src='./assets/some-dude-typing.jpg' alt='' />
+      <img src='./assets/some-dude-typing.jpg' alt='should-probably-be-empty-but-i-will-use-this-opportunity-to-say-hi-to-Nico-and-thank-my-mom' />
     </div>
   </section>
 
+  <section class='services-section'>
+    <div class='services-container'>
+      <h2 class='services-title'>Tailored for growing businesses</h2>
+      <p class='services-desc'>Develop, manage, and scale your applications on DigitalOcean’s complete cloud platform.
+      </p>
+      <div class='services-cards-container'>
+        <div class='services-card'>
+          <div class='services-card-content'>
+            <img class='services-card-icon'
+              src='https://prismic-io.s3.amazonaws.com/www-static/9a0e17ef-cd6e-432d-a137-28713dbb6b5d_icon-compute.svg'></img>
+            <h5 class='services-card-title'>Compute</h5>
+            <p class='services-card-desc'>
+              Confidently build and release with scalable compute products in the cloud.
+            </p>
+          </div>
+          <div class='services-card-links'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Droplets</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Kubernetes</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>App Platform</a>
+            </div>
+          </div>
+        </div>
+        <div class='services-card'>
+          <div class='services-card-content'>
+            <img class='services-card-icon'
+              src='https://prismic-io.s3.amazonaws.com/www-static/f0f46213-f267-4c25-b813-5f7350908b23_icon-databases.svg'></img>
+            <h5 class='services-card-title'>Databases</h5>
+            <p class='services-card-desc'>
+              Optimize your application’s performance with fully managed databases.
+            </p>
+          </div>
+          <div class='services-card-links'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>MongoDB</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>MySQL</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>PostgreSQL</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Redis</a>
+            </div>
+          </div>
+        </div>
+        <div class='services-card'>
+          <div class='services-card-content'>
+            <img class='services-card-icon'
+              src='https://prismic-io.s3.amazonaws.com/www-static/f54297ed-68b7-4e7a-ae81-8d2e81d4a102_icon-storage.svg'></img>
+            <h5 class='services-card-title'>Storage</h5>
+            <p class='services-card-desc'>
+              With highly available and scalable storage options, you can store and quickly access any amount of data.
+            </p>
+          </div>
+          <div class='services-card-links'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Block Storage</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Object Storage</a>
+            </div>
+          </div>
+        </div>
+        <div class='services-card'>
+          <div class='services-card-content'>
+            <img class='services-card-icon'
+              src='https://prismic-io.s3.amazonaws.com/www-static/75057db5-c881-4d05-b24e-052bed4e7a25_icon-networking.svg'></img>
+            <h5 class='services-card-title'>Networking</h5>
+            <p class='services-card-desc'>Secure resources and route applications with highly reliable and
+              customizable
+              networking products.</p>
+          </div>
+          <div class='services-card-links'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Firewalls</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Load Balancers</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>DNS</a>
+            </div>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Private Networking</a>
+            </div>
+          </div>
+        </div>
+        <div class='services-card'>
+          <div class='services-card-content'>
+            <img class='services-card-icon'
+              src='https://prismic-io.s3.amazonaws.com/www-static/3926c760-a868-4c24-a1c9-8a8b9f097544_icon-marketplace.svg'></img>
+            <h5 class='services-card-title'>Marketplace</h5>
+            <p class='services-card-desc'>Build faster and smarter with a diverse catalog of preconfigured 1-Click
+              Apps.
+            </p>
 
-
+          </div>
+          <div class='services-card-links'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Marketplace</a>
+            </div>
+          </div>
+        </div>
+        <div class='services-card'>
+            <div class='services-card-link'>
+              <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>View our product portfolio</a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
