--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span style="font-size: 16px;"> &rsaquo; </span>
       </a>
       <div class="quick-actions-container">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="navbar-link navbar-primary-link">We"re Hiring!</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="navbar-link navbar-primary-link">We're Hiring!</a>
         <p href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="navbar-primary-link">//</p>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="navbar-link">Blog</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="navbar-link">Docs</a>
@@ -40,10 +40,13 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="company-logo-nav">
           <img alt="home-logo" src="./assets/logo.png" />
         </a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="lower-nav-link lower-nav-link-dropdown">Products</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="lower-nav-link lower-nav-link-dropdown">Solutions</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          class="lower-nav-link lower-nav-link-dropdown">Products</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          class="lower-nav-link lower-nav-link-dropdown">Solutions</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="lower-nav-link">Marketplace</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="lower-nav-link lower-nav-link-dropdown">Community</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          class="lower-nav-link lower-nav-link-dropdown">Community</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="lower-nav-link">Pricing</a>
       </div>
       <div class="login-button-container">
@@ -51,8 +54,8 @@
         <button class="button button-primary button-signup">Sign up</button>
       </div>
     </section>
-
   </nav>
+  
   <section class="welcome-screen">
     <div class="hero-form-column">
       <div class="hero-container">
@@ -85,7 +88,8 @@
       </div>
     </div>
     <div class="hero-form-thumbnail">
-      <img src="./assets/some-dude-typing.jpg" alt="should-probably-be-empty-but-i-will-use-this-opportunity-to-say-hi-to-Nico-and-thank-my-mom" />
+      <img src="./assets/some-dude-typing.jpg"
+        alt="should-probably-be-empty-but-i-will-use-this-opportunity-to-say-hi-to-Nico-and-thank-my-mom" />
     </div>
   </section>
 
@@ -199,9 +203,9 @@
           </div>
         </div>
         <div class="services-card">
-            <div class="services-card-link">
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">View our product portfolio</a>
-            </div>
+          <div class="services-card-link">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">View our product portfolio</a>
+          </div>
         </div>
       </div>
     </div>
